REFACTO : ajout des logs + revision du code global